react simple project

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./backg.svg');
+  background-repeat: no-repeat;
+  background-size:  cover;
+  margin: 0;
+  padding: 0;
+   background-color: #e0e8ff;
 }
 
 code {
